--- a/estructura.html
+++ b/estructura.html
@@ -5,35 +5,76 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilos.css">
-    <title>Empresa de Headsets de Realidad Virtual</title>
+    <title>Landing Page VWA</title><!--Título-->
 </head>
 <body>
+    <!--Utilizamos un encabezado que llame la atención-->
     <header>
-        <h1>HeadsetsVR</h1>
-        <p>Tu puerta de entrada a la realidad virtual</p>
+        <img src="Img/Logo1.png" alt="Logo Empresa" width="100" height="100">
+        <h1>Smart Headsets</h1>
+        <p>Tu puerta de entrada a la realidad que siempre has deseado.</p>
     </header>
+
+    <!--Creamos nuestras secciones-->
     <section>
-        <h2>Descubre la experiencia de la realidad virtual</h2>
-        <p>Sumérgete en mundos increíbles y vive experiencias únicas con nuestros headsets de última generación.</p>
+        <h2>Sumérgete en experiencias extraordinarias</h2>
+        <video controls src="Video/VRvideo.mp4" alt="Ejemplos uso" width="400" height="220"autoplay></video>
+        <p><i>Descubre la revolución en la realidad virtual con HeadsetsVR. <b>Ofrecemos los mejores headsets del mercado para entretenimiento personal. Con una calidad visual impresionante, comodidad excepcional y una inmersión total en mundos virtuales</b>, nuestros dispositivos te transportarán a nuevas experiencias.</i></p>
     </section>
-    <section class="testimonials">
-        <h2>Testimoniales</h2>
-        <div class="testimonial">
-            <img src="portrait1.jpg" alt="Retrato de cliente">
-            <p>"¡Increíble! Nunca imaginé que la realidad virtual pudiera ser tan inmersiva. ¡Gracias HeadsetsVR!"</p>
+
+    <!--Realizamos secciones para destacar nuestros modelo de headsets-->
+    <section class="sections">
+        <h2>Conóce nuestros modelos</h2>
+        <div class="element">
+            <img src="Img/Modelo1.webp" alt="Modelo1" width="200" height="200">
+            <h3>SmartVR Pro</h3>
+            <p>El mejor para entretenimiento y una <b>inmersión total</b></p>
         </div>
-        <div class="testimonial">
-            <img src="portrait2.jpg" alt="Retrato de cliente">
-            <p>"La calidad de los headsets de HeadsetsVR es incomparable. ¡Totalmente recomendados!"</p>
+        <div class="element">
+            <img src="Img/Modelo2.jpg" alt="Modelo2" width="200" height="200">
+            <h3>Worldwide</h3>
+            <p>El más <b>veloz y ágil</b> para movimientos rápidos.</p>
         </div>
-        <div class="testimonial">
-            <img src="portrait3.jpg" alt="Retrato de cliente">
-            <p>"Desde que uso los headsets de HeadsetsVR, mi forma de trabajar ha cambiado por completo. ¡Una revolución en la productividad!"</p>
+        <div class="element">
+            <img src="Img/Modelo3.jpg" alt="Modelo3" width="200" height="200">
+            <h3>VR 2U</h3>
+            <p>Un precio accesible para su gran <b>versatilidad.</b></p>
         </div>
     </section>
+
     <section class="cta">
-        <h2>¿Listo para sumergirte en la realidad virtual?</h2>
-        <button>Compra ahora</button>
+        <p><i>Cada headset ha sido diseñado y probado para <b>garantizar un rendimiento óptimo y durabilidad excepcional</b>. Nuestro equipo de atención al cliente está siempre disponible para ayudarte. Descubre por qué <b>Virual Word Access S.A. DE C.V. es la elección preferida de los amantes de la realidad virtual en todo el mundo</b> y sumérgete en una nueva realidad con nosotros.</i></p>
     </section>
+
+    <!--Realizamos secciones para destacar nuestros modelo de headsets-->
+    <section class="sections">
+        <h2>¿Qué dicen nuestros clientes?</h2>
+        <div class="element">
+            <img src="Img/Client1.png" alt="Modelo1" width="200" height="200">
+            <h3>Elena Morales</h3>
+            <p><i>"¡Increíble! Nunca imaginé que la realidad virtual pudiera ser tan inmersiva. Gracias a Virtual World Access Company S.A. DE C.V., puedo explorar mundos fantásticos desde la comodidad de mi hogar. ¡Una experiencia que recomendaría a todos!"</i></p>
+        </div>
+        <div class="element">
+            <img src="Img/Client2.png" alt="Modelo2" width="200" height="200">
+            <h3>Javier Guémez</h3>
+            <p><i>"La calidad de los headsets de Virtual World Access Company S.A. DE C.V. es excepcional. Desde que los uso, mis sesiones de juego han alcanzado un nuevo nivel de realismo y emoción. ¡Totalmente recomendados!"</i>></p>
+        </div>
+        <div class="element">
+            <img src="Img/Client3.png" alt="Modelo3" width="200" height="200">
+            <h3>Laura Suárez</h3>
+            <p><i>"Virtual World Access Company S.A. DE C.V. ha cambiado por completo mi forma de disfrutar del entretenimiento. La inmersión y calidad visual que ofrecen sus headsets es incomparable. ¡Una inversión que vale cada centavo!"</i></p>
+        </div>
+    </section>
+
+    <section>
+        <h2>¿Listo para sumergirte en la realidad virtual?</h2>
+        <p>Mundos increíbles, sensaciones indescriptibles y vivencias únicas con nuestros headsets de última generación.</p>
+        <button>Cotiza en línea</button>
+    </section>
+    
+    <footer>
+        <p>&copy; 2024 Virtual World Access Company S.A. DE C.V. Todos los derechos reservados.</p>
+        <img src="Img/Logo1.png" alt="Logo Empresa" width="100" height="100">
+    </footer>
 </body>
 </html>
