solucion de errores

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!--Creamos nuestras secciones-->
     <section>
         <h2>Sumérgete en experiencias extraordinarias</h2>
-        <video controls src="Video/VRvideo.mp4" alt="Ejemplos uso" width="400" height="220" autoplay></video>
+        <video controls src="Video/VRvideo.mp4" alt="Ejemplos uso" width="400" height="220"></video>
         <p><i>Descubre la revolución en la realidad virtual con HeadsetsVR. <b>Ofrecemos los mejores headsets del mercado para entretenimiento personal. Con una calidad visual impresionante, comodidad excepcional y una inmersión total en mundos virtuales</b>, nuestros dispositivos te transportarán a nuevas experiencias.</i></p>
     </section>
 
@@ -43,6 +43,7 @@
     </section>
 
     <section>
+        <h2>¡Calidad Garantizada!</h2>
         <p><i>Cada headset ha sido diseñado y probado para <b>garantizar un rendimiento óptimo y durabilidad excepcional</b>. Nuestro equipo de atención al cliente está siempre disponible para ayudarte. Descubre por qué <b>Virual Word Access S.A. DE C.V. es la elección preferida de los amantes de la realidad virtual en todo el mundo</b> y sumérgete en una nueva realidad con nosotros.</i></p>
     </section>
 
