correccion de errores

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!--Creamos nuestras secciones-->
     <section>
         <h2>Sumérgete en experiencias extraordinarias</h2>
-        <video controls src="Video/VRvideo.mp4" alt="Ejemplos uso" width="400" height="220"></video>
+        <video controls src="Video/VRvideo.mp4" width="400" height="220"></video>
         <p><i>Descubre la revolución en la realidad virtual con HeadsetsVR. <b>Ofrecemos los mejores headsets del mercado para entretenimiento personal. Con una calidad visual impresionante, comodidad excepcional y una inmersión total en mundos virtuales</b>, nuestros dispositivos te transportarán a nuevas experiencias.</i></p>
     </section>
 
